add hamster flash

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -174,9 +174,19 @@ layout: default
                     </div>
                 </section>
                 <hr>
-                <h5>读书</h5>
+<!--                 <h5>读书</h5>
                  <script type="text/javascript" src="http://www.douban.com/service/badge/70526937/?selection=latest&amp;picsize=medium&amp;show=dolist&amp;n=10&amp;hidelogo=on&amp;cat=book&amp;columns=2">
                  </script>
+                				 <hr> -->
+
+                <h5>Hamster</h5>
+				<div>
+                 <object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/hamster/hamster.swf?" width="253" height="253">
+				<param name="movie" value="http://cdn.abowman.com/widgets/hamster/hamster.swf?"></param>
+				<param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param>
+				</object>
+				</div>
+
                 <!-- Friends Blog -->
                 {% if site.friends %}
                 <hr>
