--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -181,10 +181,11 @@ layout: default
 
                 <h5>Hamster</h5>
 				<div>
-                 <object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/hamster/hamster.swf?" width="253" height="253">
-				<param name="movie" value="http://cdn.abowman.com/widgets/hamster/hamster.swf?"></param>
-				<param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param>
-				</object>
+<!--                  <object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/hamster/hamster.swf?" width="253" height="253">
+                 				<param name="movie" value="http://cdn.abowman.com/widgets/hamster/hamster.swf?"></param>
+                 				<param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param>
+                 				</object> -->
+				<iframe runat="server" src="http://cdn.abowman.com/widgets/hamster/hamster.swf" width="253" height="253" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no" allowtransparency="yes"></iframe>
 				</div>
 
                 <!-- Friends Blog -->
