--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -180,13 +180,12 @@ layout: default
                 				 <hr> -->
 
                 <h5>Hamster</h5>
-				<div>
-<!--                  <object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/hamster/hamster.swf?" width="253" height="253">
-                 				<param name="movie" value="http://cdn.abowman.com/widgets/hamster/hamster.swf?"></param>
-                 				<param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param>
-                 				</object> -->
-				<iframe runat="server" src="http://cdn.abowman.com/widgets/hamster/hamster.swf" width="253" height="253" frameborder="no" border="0" marginwidth="0" marginheight="0" scrolling="no" allowtransparency="yes"></iframe>
-				</div>
+
+				<object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/hamster/hamster.swf?" width="253" height="253">
+                 		<param name="movie" value="http://cdn.abowman.com/widgets/hamster/hamster.swf?"></param>
+                 		<param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param>
+                </object>
+
 
                 <!-- Friends Blog -->
                 {% if site.friends %}
