--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -182,8 +182,9 @@ layout: default
                 <h5>Hamster</h5>
 
 				<object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/hamster/hamster.swf?" width="253" height="253">
-                 		<param name="movie" value="http://cdn.abowman.com/widgets/hamster/hamster.swf?"></param>
-                 		<param name="AllowScriptAccess" value="always"></param><param name="wmode" value="opaque"></param>
+                 		<param name="movie" value="http://cdn.abowman.com/widgets/hamster/hamster.swf?"/>
+                 		<param name="AllowScriptAccess" value="always"/>
+						<param name="wmode" value="opaque"/>
                 </object>
 
 
