--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -181,11 +181,17 @@ layout: default
 
                 <h5>Hamster</h5>
 
-				<object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/hamster/hamster.swf?" width="253" height="190">
-                 		<param name="movie" value="http://cdn.abowman.com/widgets/hamster/hamster.swf?"></param>
+				<object type="application/x-shockwave-flash" style="outline:none;" data="http://files.cnblogs.com/mrcoke/hamster.swf?" width="253" height="190">
+                 		<param name="movie" value="http://files.cnblogs.com/mrcoke/hamster.swf?"></param>
                  		<param name="AllowScriptAccess" value="always"></param>
 						<param name="wmode" value="opaque"></param>
                 </object>
+
+<!-- 				<object type="application/x-shockwave-flash" style="outline:none;" data="http://cdn.abowman.com/widgets/hamster/hamster.swf?" width="253" height="190">
+				                 		<param name="movie" value="http://cdn.abowman.com/widgets/hamster/hamster.swf?"></param>
+				                 		<param name="AllowScriptAccess" value="always"></param>
+						<param name="wmode" value="opaque"></param>
+				                </object> -->
 
 
                 <!-- Friends Blog -->
